--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "fastclick": "^1.0.6",
     "iscroll": "5.1.0",
     "normalize.css": "^7.0.0",
